--- a/.env.example
+++ b/.env.example
@@ -6,21 +6,21 @@ SERVER_URL=http://<IP OR NAME>:<PORT>
 
 # https
 isHTTPS=false
-SECURE_PORT= 443
+SECURE_PORT=443
 SECURE_SERVER_URL=https://<IP OR NAME>:<PORT>
 
-KEY_PEM_HTTPS= './certs/https/server-key.pem'
-CERT_PEM_HTTPS= './certs/https/server-cert.pem'
+KEY_PEM_HTTPS='./certs/https/server-key.pem'
+CERT_PEM_HTTPS='./certs/https/server-cert.pem'
 
 ##############################################
 # URL of the Mongo DB
 
 #TLS for mongo
-CA_CERT_MONGO= './certs/server_root_CA.crt'
-KEY_CERT_MONGO= './certs/client.key'
-PEM_CERT_MONGO= './certs/client.pem'
-IS_TLS_MONGO=true
-DB_NAME=cleanCode
+CA_CERT_MONGO=''
+KEY_CERT_MONGO=''
+PEM_CERT_MONGO=''
+IS_TLS_MONGO=false
+DB_NAME=admin
 
 ##############################################
 # JWT
@@ -55,7 +55,7 @@ VERSION=1.0.0
 SERVER_FINGERKEY=SET YOUR RAMDON FINGERKEY HERE
 SENDGRID_API_KEY=SET YOU API KEY HERE
 JWT_SECRET=WRITE A RANDOM STRING HERE
-CA_TOKEN_MONGO= WRITE YOUR CA.cert PASSWORD HERE
+CA_TOKEN_MONGO=WRITE YOUR CA.cert PASSWORD HERE
 MONGO_URL=INSERT YOUR MONGO_URL HERE
 MAIL_OWNER=NAME A MAIL_OWNER HERE
 MAIL_USERNAME=SENDGRID USERNAME HERE
