--- a/.env.prod
+++ b/.env.prod
@@ -2,22 +2,21 @@
 # Server config
 # http
 PORT=8051
-SERVER_URL=http://localhost:8051
+SERVER_URL=http://prod.kathesama.com.ar:8051
 
 # https
-SECURE_PORT= 443
-SECURE_SERVER_URL=https://localhost:443
-
-KEY_PEM_HTTPS= './certs/https/server-key.pem'
-CERT_PEM_HTTPS= './certs/https/server-cert.pem'
+SECURE_PORT=443
+SECURE_SERVER_URL=https://prod.kathesama.com.ar:443
+KEY_PEM_HTTPS='./certs/https/server-key.pem'
+CERT_PEM_HTTPS='./certs/https/server-cert.pem'
 
 ##############################################
 # URL of the Mongo DB
 
 #TLS for mongo
-CA_CERT_MONGO= './certs/server_root_CA.crt'
-KEY_CERT_MONGO= './certs/client.key'
-PEM_CERT_MONGO= './certs/client.pem'
+CA_CERT_MONGO=''
+KEY_CERT_MONGO=''
+PEM_CERT_MONGO=''
 
 ##############################################
 # JWT
@@ -37,7 +36,7 @@ JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 ##############################################
 # DDOS
-HOST_ENABLED=['localhost', '127.0.0.1']
+HOST_ENABLED=['prod.kathesama.com.ar', '127.0.0.1']
 # 1 hour
 HOST_TIME_WINDOWD=36000
 # 1 each minute max
@@ -49,17 +48,17 @@ VERSION=1.0.0
 
 ##############################################
 # SENSITIVE DATA
-#SERVER_FINGERKEY=
-#SENDGRID_API_KEY=
-#JWT_SECRET=
-#CA_TOKEN_MONGO=
-#MONGO_URL=
-#MAIL_OWNER=
-#MAIL_USERNAME=
-#MAIL_FROM=
-#IS_TLS_MONGO=
-#DB_NAME=
-#isHTTPS=
-#GOOGLE_CLIENT_ID=INSERT YOUR GOOGLE CLIENT ID HERE
-#GOOGLE_SECRET_ID=INSERT YOUR GOOGLE SECRET ID HERE
-#IS_COOKIE_HTTPONLY_BASED=SET IF YOUR API REFRESH TOKEN WILL BE BASED ON SECURE COOKIE
+SERVER_FINGERKEY=A"p25d7-eEY_rU,];Zf6Cr]y!&p!,KWfF.'\dsG$tuV-#g{}XYLKvzhd.P^m~fDF*>Z?`.WJ{}&:%&"hXNT:r,%h<NW.BRr^9(6s~En/v7SnbV:L2g.n2DuZad,&H:<8w{uhnY#NV^[a=-A\vD"_xcmE#fwK8[3Q%Ftm-b26)FE,D?q^tT[xCnrHuQZwL]x@VK\<s"+Z%'p{p}^?32^ZrCDL7unP'7"y.QxnFM(!zu3'$gYgCKy[ad,4.DTf&Bq"
+SENDGRID_API_KEY=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
+JWT_SECRET=2UN95m~)j+z`=D`b/.C%{V%?Bc""Y<.G9z)_t;mmVgFssbWU}FcRnN3G.@"5V\`/),UB$%%zx-_`czmM:VuK+*"]\_]xwbVn']5[WK<SNA-ue4{$N2E_rCD\+!Yz*bNruL,>qN6Mf_E[E{=CXC=FU'c7.]JrCKH/:XTNTM6:M'6Dadf#qk/y;cxpFuHeX[2,?hrG.6U>9vA~"4t4B8yatasv&7BD}r5F/'E&HKx[6,KHKf2hBmU&xPy&G@d.*nK9
+CA_TOKEN_MONGO=''
+MONGO_AUTH_SERVER=mongodb://userAdmin:kZWQiOnRydWV9LHsiY29@prod.kathesama.com.ar:27017/?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=true
+MAIL_OWNER="Katherine Aguirre"
+MAIL_USERNAME=kathemica
+MAIL_FROM=kathemica@gmail.com
+IS_TLS_MONGO=true
+DB_NAME=iot
+isHTTPS=false
+GOOGLE_CLIENT_ID=849565332064-i3heqmsb1j58dkph6s991rh94u00k6fo.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
+IS_COOKIE_HTTPONLY_BASED=true
