--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@binance/fingerprint": "^1.3.49",
     "@sendgrid/mail": "^7.4.5",
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
