chore: added language support, fixed google login

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,8 +20,7 @@
       "globalReturn": false,
       "experimentalObjectRestSpread": true
     },
-    "requireConfigFile": false,
-    "extraFileExtensions": [".json"]
+    "requireConfigFile": false
   },
   "plugins": [
     "jest",
